added data, updated README, added error prevention